--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,8 +5,8 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">Shopping list</a></li>
+                <li><a href="#" (click)="onSend('recipe')">Recipes</a></li>
+                <li><a href="#" (click)="onSend('shopping')">Shopping list</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
