--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,12 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="image-responsive">
+        <img [src]="recipe.imagePath" alt="{{recipe.name}}" class="image-responsive"
+        style="max-height: 300px;">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h4>Recipe Name</h4>
+        <h4>{{recipe.name}}</h4>
     </div>
 </div>
 <div class="row">
@@ -24,7 +25,7 @@
 </div>
 <div class="row">
     <div class="col-xs-12">
-        Description
+        {{recipe.description}}
     </div>
 </div>
 <div class="row">
