--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,17 +4,17 @@
             <div class="row">
                 <div class="col-sm-5 form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" id="name" class="form-control" #inputName>
                 </div>
                 <div class="col-sm-2">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" id="amount" class="form-control" #inputAmount>
                 </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
                     <div class="btn-toolbar">
-                        <button class="btn btn-success" type="submit">Add</button>
+                        <button class="btn btn-success" type="submit" (click)="onAdded()">Add</button>
                         <button class="btn btn-danger" type="button">Delete</button>
                         <button class="btn btn-primary" type="button">Clear</button>
                     </div>
